--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -13,6 +13,7 @@
     minio_project: '{{ tpa_project }}'
     minio_key: minio
     minio_secret: minio123
+    minio_region: eu-west-1
   tasks:
     - name: Check Required Parameters
       ansible.builtin.fail:
@@ -29,13 +30,13 @@
       ansible.builtin.set_fact:
         route_subdomain: "apps.{{ domain }}"
 
-    - name: Include Keycloak
-      ansible.builtin.include_role:
-        name: keycloak
+    # - name: Include Keycloak
+    #   ansible.builtin.include_role:
+    #     name: keycloak
 
-    - name: Include TAS
-      ansible.builtin.include_role:
-        name: tas
+    # - name: Include TAS
+    #   ansible.builtin.include_role:
+    #     name: tas
 
     - name: Include TPA
       ansible.builtin.include_role:
