--- a/ansible/roles/streams/files/cluster.yml
+++ b/ansible/roles/streams/files/cluster.yml
@@ -9,10 +9,8 @@ spec:
         port: 9092
         type: internal
         tls: false
-      - name: tls
-        port: 9093
-        type: internal
-        tls: true
+        authentication:
+          type: scram-sha-512
     config:
       offsets.topic.replication.factor: 3
       transaction.state.log.replication.factor: 3
