--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -30,13 +30,13 @@
       ansible.builtin.set_fact:
         route_subdomain: "apps.{{ domain }}"
 
-    # - name: Include Keycloak
-    #   ansible.builtin.include_role:
-    #     name: keycloak
+    - name: Include Keycloak
+      ansible.builtin.include_role:
+        name: keycloak
 
-    # - name: Include TAS
-    #   ansible.builtin.include_role:
-    #     name: tas
+    - name: Include TAS
+      ansible.builtin.include_role:
+        name: tas
 
     - name: Include TPA
       ansible.builtin.include_role:
