--- a/ansible/roles/streams/tasks/main.yml
+++ b/ansible/roles/streams/tasks/main.yml
@@ -1,2 +1,5 @@
 - name: Provision AMQ Streams
   ansible.builtin.include_tasks: provision.yml
+
+- name: Configure AMQ Streams
+  ansible.builtin.include_tasks: configure.yml
