--- a/ansible/roles/tpa/tasks/main.yml
+++ b/ansible/roles/tpa/tasks/main.yml
@@ -58,12 +58,24 @@
     dest: "/tmp/values-rhtpa.yaml"
     mode: "0655"
 
-# - name: Add openshift-helm-charts chart repo
-#   kubernetes.core.helm_repository:
-#     name: openshift-helm-charts
-#     repo_url: "https://charts.openshift.io"
-#   ignore_errors: true
-#   register: ignore_errors_register
+- name: Add openshift-helm-charts chart repo
+  kubernetes.core.helm_repository:
+    name: openshift-helm-charts
+    repo_url: "https://charts.openshift.io"
+  ignore_errors: true
+  register: ignore_errors_register  
+
+- name: Log in as super user with token on OpenShift 4
+  ansible.builtin.command: "oc login --token={{ token }}  --server={{ server }} --insecure-skip-tls-verify={{ insecure_skip_tls_verify }}"
+  when:
+    - token is defined
+    - token is not none
+    - token|trim() != ""
+  ignore_errors: false
+
+- name: Install Helm
+  ansible.builtin.command: "helm install redhat-trusted-profile-analyzer openshift-helm-charts/redhat-trusted-profile-analyzer -n trusted-profile-analyzer --values /tmp/values-rhtpa.yaml"
+  ignore_errors: false    
 
 # - name: Deploy redhat-trusted-profile-analyzer chart
 #   kubernetes.core.helm:
