--- a/ansible/roles/devhub/files/dynamic-plugins.yml
+++ b/ansible/roles/devhub/files/dynamic-plugins.yml
@@ -7,5 +7,45 @@ data:
     includes:
       - dynamic-plugins.default.yaml
     plugins:
-      - package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-keycloak-backend-dynamic
-        disabled: false
+      - disabled: false
+        package: ./dynamic-plugins/dist/roadiehq-backstage-plugin-security-insights
+      - disabled: false
+        package: ./dynamic-plugins/dist/backstage-plugin-kubernetes-backend-dynamic
+      - disabled: false
+        package: ./dynamic-plugins/dist/backstage-plugin-kubernetes
+      - disabled: false
+        package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-topology
+      - disabled: false
+        package: ./dynamic-plugins/dist/roadiehq-backstage-plugin-argo-cd-backend-dynamic
+      - disabled: false
+        package: ./dynamic-plugins/dist/roadiehq-scaffolder-backend-argocd-dynamic
+      - disabled: false
+        package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-argocd
+      - disabled: true
+        package: ./dynamic-plugins/dist/roadiehq-backstage-plugin-argo-cd
+      - disabled: false
+        package: ./dynamic-plugins/dist/roadiehq-scaffolder-backend-module-utils-dynamic
+      - disabled: false
+        package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-keycloak-backend-dynamic
+      - disabled: false
+        package: ./dynamic-plugins/dist/backstage-plugin-techdocs-backend-dynamic
+      - disabled: false
+        package: ./dynamic-plugins/dist/backstage-plugin-techdocs
+      - disabled: false
+        package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-tekton
+        pluginConfig:
+          dynamicPlugins:
+            frontend:
+              janus-idp.backstage-plugin-tekton:
+                mountPoints:
+                - config:
+                    if:
+                      allOf:
+                      - isTektonCIAvailable
+                    layout:
+                      gridColumn: 1 / -1
+                      gridRowStart: 1
+                  importName: TektonCI
+                  mountPoint: entity.page.ci/cards
+      - disabled: false
+        package: ./dynamic-plugins/dist/backstage-plugin-tech-radar
