--- a/ansible/roles/devhub/tasks/configuration.yml
+++ b/ansible/roles/devhub/tasks/configuration.yml
@@ -8,6 +8,84 @@
     name: '{{ rhdh_project }}'
     state: present
 
+- name: Evaluate ArgoCD Application Namespace
+  kubernetes.core.k8s:
+    api_key: '{{ token }}'
+    host: '{{ server }}'
+    validate_certs: false
+    api_version: v1
+    kind: Namespace
+    name: 'rhtap'
+    state: present
+
+- name: Get ARGOCD openshift-gitops-cluster secret
+  kubernetes.core.k8s_info:
+    api_key: '{{ token }}'
+    host: '{{ server }}'
+    validate_certs: '{{ verify_tls }}'
+    kind: Secret
+    name: openshift-gitops-cluster
+    namespace: openshift-gitops
+    api_version: v1
+  register: r_credential
+  until:
+    - r_credential.resources is defined
+    - r_credential.resources[0] is defined
+  retries: 10
+  delay: 15
+
+- name: Set admin password
+  ansible.builtin.set_fact:
+    arcocd_admin_password: "{{ r_credential.resources[0].data['admin.password'] | b64decode }}"
+
+- name: Evaluate RHDH SA
+  kubernetes.core.k8s:
+    api_key: '{{ token }}'
+    host: '{{ server }}'
+    validate_certs: false
+    api_version: v1
+    kind: ServiceAccount
+    name: '{{ rhdh_sa_name }}'
+    namespace: '{{ rhdh_project }}'
+    state: present
+
+- name: Evaluate RHDH Required CR
+  kubernetes.core.k8s:
+    api_key: '{{ token }}'
+    host: '{{ server }}'
+    validate_certs: false
+    state: present
+    resource_definition: "{{ lookup('file', 'tekton-permissions.yml') }}"
+
+- name: Evaluate RHDH CRB
+  kubernetes.core.k8s:
+    api_key: '{{ token }}'
+    host: '{{ server }}'
+    validate_certs: false
+    state: present
+    resource_definition: "{{ lookup('template', 'rhdh-crb.yml.j2') }}"
+
+- name: Log in as super user with token on OpenShift 4
+  ansible.builtin.command: "oc login --token={{ token }}  --server={{ server }} --insecure-skip-tls-verify={{ insecure_skip_tls_verify }}"
+  when:
+    - token is defined
+    - token is not none
+    - token|trim() != ""
+  ignore_errors: false
+
+- name: Generate Long Live Token for SA
+  ansible.builtin.command: "oc create token {{ rhdh_sa_name }} --duration=100000h -n {{ rhdh_project }}"
+  when:
+    - token is defined
+    - token is not none
+    - token|trim() != ""
+  ignore_errors: false
+  register: r_create_token
+
+- name: Set SA Token
+  ansible.builtin.set_fact:
+    rhdh_sa_token: "{{ r_create_token.stdout}}"
+
 - name: Evaluate RHDH Configuration 
   kubernetes.core.k8s:
     api_key: '{{ token }}'
