--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -29,27 +29,14 @@
     rhdh_keycloak_client_id: rhdh
     rhdh_keycloak_client_secret: 9IAuKgbRcEUTU4mjeUUTY25P6IKo0B6L
     rhdh_sa_name: local-cluster
+    rhdh_template_urls:
+    - https://github.com/GcBackstageDemos/tssc-sample-templates/blob/main/all.yaml
+    - https://github.com/GcBackstageDemos/trusted-application-pipeline-templates/blob/main/showcase-templates.yaml
 
     gitops_project: rhtap
 
     # pipeline
     pipeline_project: demo-tap-pipeline
-    pipeline_app_name:
-    pipeline_app_git_repo:
-    pipeline_app_image:
-    pipeline_source_image:
-    pipeline_preprod_image:
-    pipeline_acs_token_secret:
-    pipeline_git_host: github.com
-    pipeline_git_host_url: https://github.com
-    pipeline_acs_central_url: CHANGE_ME
-    pipeline_sonarqube_url:
-    pipeline_sonarqube_token_secret: object-detection-rest-sonarqube-secret
-    pipeline_common_password_secret:  common-password-secret
-    pipeline_argocd_host: argocd-server-janus-argocd.apps.cluster-jh82x.sandbox1737.opentlc.com
-    pipeline_cyclonedx_host_url: https://cyclonedx-bom-repo-server-cyclonedx.apps.cluster-tr47n.tr47n.sandbox987.opentlc.com
-    pipeline_trustification_secret: trustification-secret
-    pipeline_sigstore_oidc_issuer: https://keycloak-keycloak-system.apps.cluster-v42rv.sandbox795.opentlc.com/auth/realms/sigstore
   tasks:
     - name: Check Required Parameters
       ansible.builtin.fail:
