fixing minio and devhub deployment

--- a/ansible/roles/devhub/tasks/installation.yml
+++ b/ansible/roles/devhub/tasks/installation.yml
@@ -35,12 +35,11 @@
         name: rhdh
         namespace: rhdh-operator
       spec:
-        channel: fast
+        channel: fast-1.2
         installPlanApproval: Automatic
         name: rhdh
         source: redhat-operators
         sourceNamespace: openshift-marketplace
-        startingCSV: rhdh-operator.v1.2.3-0.1724956299.p
 
 - name: Wait for Developer Hub  operator to be running
   kubernetes.core.k8s_info:
