fixing TPA deployment

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -15,6 +15,7 @@
     # TPA configuration
     tpa_project: trusted-profile-analyzer
     tpa_walker_secret: walker_secret
+    tpa_helm_version: 0.1.2
 
     # Minio configuration
     minio_stateful: true
