--- a/ansible/roles/tekton/tasks/install.yml
+++ b/ansible/roles/tekton/tasks/install.yml
@@ -8,7 +8,7 @@
     api_version: operators.coreos.com/v1alpha1
     definition:
       metadata:
-        name: openshift-pipelines-operator
+        name: openshift-pipelines-operator-rh
         namespace: openshift-operators
       spec:
         installPlanApproval: Automatic
@@ -17,19 +17,15 @@
         source: redhat-operators
         sourceNamespace: openshift-marketplace
 
-- name: Wait Tekton Operator
+- name: Wait for Tekton operator to install
   kubernetes.core.k8s_info:
     api_key: '{{ token }}'
     host: '{{ server }}'
-    validate_certs: false
-    api_version: v1
-    kind: Pod
-    namespace: openshift-operators
-    label_selectors:
-      - app = tekton-operator
-    field_selectors:
-      - status.phase=Running
-  register: r_tekton_pod
-  retries: 20
-  delay: 10
-  until: r_tekton_pod.resources | list | length == 1
+    validate_certs: '{{ verify_tls }}'
+    api_version: apiextensions.k8s.io/v1
+    kind: CustomResourceDefinition
+    name: tasks.tekton.dev
+  register: _crd
+  until: _crd.resources | list | length == 1
+  retries: 10
+  delay: 30
