adding more storage to minio and db

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -23,6 +23,7 @@
     minio_key: minio
     minio_secret: minio123
     minio_region: eu-west-1
+    minio_storage_size: 10Gi
 
     # Developer Hub Configuration
     rhdh_project: rhdh
