--- a/ansible/roles/tekton/tasks/main.yml
+++ b/ansible/roles/tekton/tasks/main.yml
@@ -12,7 +12,7 @@
         namespace: openshift-operators
       spec:
         installPlanApproval: Automatic
-        channel: pipelines-1.16
+        channel: latest
         name: openshift-pipelines-operator-rh
         source: redhat-operators
         sourceNamespace: openshift-marketplace
