--- a/ansible/roles/devhub/files/dynamic-plugins.yml
+++ b/ansible/roles/devhub/files/dynamic-plugins.yml
@@ -20,13 +20,15 @@ data:
       - disabled: false
         package: ./dynamic-plugins/dist/backstage-plugin-techdocs
       - disabled: false
-        package: ./dynamic-plugins/dist/roadiehq-backstage-plugin-argo-cd-backend-dynamic        
+        package: ./dynamic-plugins/dist/roadiehq-backstage-plugin-argo-cd-backend-dynamic   
       - disabled: false
-        package: ./dynamic-plugins/dist/backstage-community-plugin-redhat-argocd        
+        package: ./dynamic-plugins/dist/roadiehq-scaffolder-backend-argocd-dynamic                    
       - disabled: false
         package: ./dynamic-plugins/dist/roadiehq-scaffolder-backend-module-utils-dynamic
       - disabled: false
-        package: ./dynamic-plugins/dist/roadiehq-backstage-plugin-security-insights       
+        package: ./dynamic-plugins/dist/roadiehq-backstage-plugin-security-insights
+      - disabled: false
+        package: ./dynamic-plugins/dist/backstage-community-plugin-redhat-argocd                
       - disabled: false
         package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-keycloak-backend-dynamic
       - disabled: false
