updating storage size

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -17,6 +17,7 @@
     tpa_project: trusted-profile-analyzer
     tpa_walker_secret: walker_secret
     tpa_helm_version: 0.1.2
+    tpa_db_storage_size: 40Gi
 
 # Minio configuration
     minio_project: '{{ tpa_project }}'
