--- a/ansible/roles/devhub/files/dynamic-plugins.yml
+++ b/ansible/roles/devhub/files/dynamic-plugins.yml
@@ -8,9 +8,7 @@ data:
       - dynamic-plugins.default.yaml
     plugins:
       - disabled: false
-        package: ./dynamic-plugins/dist/backstage-plugin-scaffolder-backend-module-github-dynamic  
-      - disabled: false
-        package: ./dynamic-plugins/dist/backstage-plugin-tech-radar    
+        package: ./dynamic-plugins/dist/backstage-plugin-scaffolder-backend-module-github-dynamic   
       - disabled: false
         package: ./dynamic-plugins/dist/backstage-plugin-kubernetes-backend-dynamic
       - disabled: false
@@ -30,15 +28,15 @@ data:
       - disabled: false
         package: ./dynamic-plugins/dist/backstage-community-plugin-redhat-argocd                
       - disabled: false
-        package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-keycloak-backend-dynamic
+        package: ./dynamic-plugins/dist/backstage-community-plugin-catalog-backend-module-keycloak-dynamic
       - disabled: false
-        package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-topology   
+        package: ./dynamic-plugins/dist/backstage-community-plugin-topology   
       - disabled: false
-        package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-tekton
+        package: ./dynamic-plugins/dist/backstage-community-plugin-tekton
         pluginConfig:
           dynamicPlugins:
             frontend:
-              janus-idp.backstage-plugin-tekton:
+              backstage-community.plugin-tekton:
                 mountPoints:
                 - config:
                     if:
