setting config in the last working version

--- a/ansible/roles/devhub/tasks/installation.yml
+++ b/ansible/roles/devhub/tasks/installation.yml
@@ -35,7 +35,7 @@
         name: rhdh
         namespace: rhdh-operator
       spec:
-        channel: fast
+        channel: fast-1.3
         installPlanApproval: Automatic
         name: rhdh
         source: redhat-operators
